верстка главной страницы

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,5 +23,7 @@
     "less-loader": "^5.0.0",
     "nuxt": "^2.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "prettier": "2.2.1"
+  }
 }
