--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     django:
         build:
             context: backend
-        container_name: dev_uanit_dj01
+        container_name: dev_dubai_dj01
         command: bash -c 'while !</dev/tcp/db/5432; do sleep 1; done; python manage.py migrate && python manage.py runserver 0.0.0.0:8000'
         env_file: .env
         image: django-image-sampleproject
