поменял подключение css переменных

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "vuejs-paginate": "^2.1.0"
   },
   "devDependencies": {
+    "@nuxtjs/style-resources": "^1.0.0",
     "prettier": "2.2.1"
   }
 }
