--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,16 @@ version: '3'
 services:
     db:
         image: postgres:11
-        container_name: dev_sampleproject_pg01
+        container_name: dev_dubai_pg01
         restart: always
         env_file: .env
     django:
         build:
             context: backend
-        container_name: dev_uanit_dj01
+        container_name: dev_dubai_dj01
         command: bash -c 'while !</dev/tcp/db/5432; do sleep 1; done; python manage.py migrate && python manage.py runserver 0.0.0.0:8000'
         env_file: .env
-        image: django-image-sampleproject
+        image: django-image-dubai
         volumes:
             - ./backend:/app
         depends_on:
@@ -22,7 +22,7 @@ services:
     nuxt:
         build:
             context: frontend
-        container_name: dev_sampleproject_nx01
+        container_name: dev_dubai_nx01
         command: bash -c 'yarn dev'
         env_file: .env
         stdin_open: true
