--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ chardet==4.0.0
 cryptography==3.3.1
 defusedxml==0.7.0rc2
 Django==2.0.3
+django-admin-json-editor==0.2.3
 django-appconf==1.0.4
 django-choices==1.7.1
 django-colorfield==0.4.1
