--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -5,13 +5,11 @@ services:
         build:
             context: backend
         container_name: dev_sampleproject_dj01
-        command: bash -c 'while !</dev/tcp/db/5432; do sleep 1; done; python manage.py migrate && python manage.py collectstatic --noinput && gunicorn -b 0.0.0.0:8000 backend.wsgi:application'
+        command: bash -c 'python manage.py migrate && python manage.py collectstatic --noinput && gunicorn -b 0.0.0.0:8000 backend.wsgi:application'
         env_file: .env
         image: django-image-sampleproject
         volumes:
             - ./backend:/app
-        depends_on:
-            - db
         ports:
             - "8000:8000"
     nuxt:
