--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "nuxt": "^2.0.0",
+    "vue-slick-carousel": "^1.0.6",
     "vue2-google-maps": "^0.10.7",
     "vuejs-paginate": "^2.1.0"
   },
