--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "nuxt": "^2.0.0",
     "vue-slick-carousel": "^1.0.6",
     "vue2-google-maps": "^0.10.7",
-    "vuejs-paginate": "^2.1.0"
+    "vuejs-paginate": "^2.1.0",
+    "vuelidate": "^0.7.6"
   },
   "devDependencies": {
     "@nuxtjs/moment": "^1.6.1",
