--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -35,7 +35,7 @@ promise==2.3
 psycopg2==2.8.4
 py-moneyed==0.8.0
 pycparser==2.20
-PyJWT==1.7.0
+#PyJWT==1.7.0
 python3-openid==3.2.0
 pytz==2020.4
 requests==2.25.1
