--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -2,6 +2,7 @@ version: '3.0'
 
 services:
     django:
+        network_mode: "host"
         build:
             context: backend
         container_name: dev_sampleproject_dj01
