--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -36,6 +36,7 @@ promise==2.3
 psycopg2==2.8.4
 py-moneyed==0.8.0
 pycparser==2.20
+pycrypto==2.6.1
 PyJWT==1.7.1
 python-telegram-bot==13.2
 python3-openid==3.2.0
