--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/apollo": "^4.0.0-rc19",
     "@nuxtjs/device": "^1.2.4",
     "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/google-analytics": "^2.4.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
     "cookie-universal-nuxt": "^2.1.0",
